force-app/main/default/objects/Sales_Order__c/fields/Number_of_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Refunds__c</fullName>
    <label>Number of Refunds</label>
    <summaryForeignKey>Refund_Request__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>