force-app/main/default/objects/Sales_Order__c/validationRules/BusinenssRequirement.validationRule-meta.xml
<ValidationRule>
    <fullName>BusinenssRequirement</fullName>
    <active>false</active>
    <errorConditionFormula>YEAR( Sales_Order_Date__c   ) &lt;&gt; YEAR(TODAY())  || 
MONTH( Sales_Order_Date__c   ) &lt;&gt;  MONTH(TODAY())</errorConditionFormula>
    <errorDisplayField>Sales_Order_Date__c</errorDisplayField>
    <errorMessage>date must be in current month</errorMessage>
</ValidationRule>