force-app/main/default/objects/Sales_Order__c/validationRules/RefundValidatins.validationRule-meta.xml
<ValidationRule>
    <fullName>RefundValidatins</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Refunds__c = 0  &amp;&amp;    ISPICKVAL(Status__c, &quot;Refund&quot;) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
    <errorMessage>status can not be changed</errorMessage>
</ValidationRule>